2010-02-22  Enrica Casucci  <enrica@apple.com>

        Reviewed by Dan Bernstein.

        Reproducible crash in WebCore::nextLinePosition on Tweeteorites.com
        <rdar://problem/7615758>
        https://bugs.webkit.org/show_bug.cgi?id=35060

        * editing/selection/extend-byline-withfloat-expected.txt: Added.
        * editing/selection/extend-byline-withfloat.html: Added.

2010-02-22  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        AX: AXFocused is not writable like it should be on nodes
        https://bugs.webkit.org/show_bug.cgi?id=35186

        * platform/mac/accessibility/element-focus-expected.txt: Added.
        * platform/mac/accessibility/element-focus.html: Added.

2010-02-07  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Eric Seidel.

        When page-break-{after,before} is set to always, force page breaks even for overflow-specified elements.
        RenderBlock::inRootBlockContext() was introduced by Changeset 5611. Although it is a reasonable criteria for choosing an optional page break location, it is not for a mandatory page break as specified by http://dev.w3.org/csswg/css3-page/#forced-pg-brk. The method is removed because it is not used anywhere else.
        Note: this patch makes page break work for overflow-specified elements. For tables and floated elements, more work is needed.
        https://bugs.webkit.org/show_bug.cgi?id=9526

        * printing/page-break-always-for-overflow-expected.txt: Added.
        * printing/page-break-always-for-overflow.html: Added.
        * printing/script-tests/page-break-always-for-overflow.js: Added.

2010-02-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Dimitri Glazkov.

        fast/forms/search-event-delay.html failed on Snow Leopard Debug Bot
        https://bugs.webkit.org/show_bug.cgi?id=33543

        * platform/mac-snowleopard/Skipped:
         - This test prints times and expects 0.1s precision even on Debug bots.