@@ -10,8 +10,8 @@ PASS body.childAtIndex(0).childAtIndex(0).role is 'AXRole: AXLink'
 PASS body.childAtIndex(0).childAtIndex(0).isAttributeSettable('AXFocused') is true
 PASS body.childAtIndex(1).role is 'AXRole: AXStaticText'
 PASS body.childAtIndex(1).isAttributeSettable('AXFocused') is true
-PASS body.childAtIndex(2).childAtIndex(0).role is 'AXRole: AXGroup'
-PASS body.childAtIndex(2).childAtIndex(0).isAttributeSettable('AXFocused') is true
+PASS body.childAtIndex(2).role is 'AXRole: AXGroup'
+PASS body.childAtIndex(2).isAttributeSettable('AXFocused') is true
 PASS successfullyParsed is true
 
 TEST COMPLETE
