@@ -1,3 +1,13 @@
+2010-02-22  Chris Fleizach  <cfleizach@apple.com>
+
+        Fixing Layout test failure. Not reviewed.
+
+        AX: AXFocused is not writable like it should be on nodes
+        https://bugs.webkit.org/show_bug.cgi?id=35186
+
+        * platform/mac/accessibility/element-focus-expected.txt:
+        * platform/mac/accessibility/element-focus.html:
+
 2010-02-22  Enrica Casucci  <enrica@apple.com>
 
         Reviewed by Dan Bernstein.
